<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_equation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textSize="35dp"/>

    <TextView
        android:id="@+id/tv_display"
        android:layout_below="@id/tv_equation"
        android:textSize="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end" />

    <LinearLayout
        android:id="@+id/control_buttons"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/tv_display"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/numbers"
        android:gravity="center">


        <Button
            android:id="@+id/divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_divide"
            android:onClick="operatorClicked"/>
        <Button
            android:id="@+id/multiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_multiply"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_add"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/subtract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_subtract"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/equals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_equals"
            android:onClick="operatorClicked"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/numbers"
        android:layout_below="@id/tv_display"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_row"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clearClicked"
                />
            <Button
                android:id="@+id/negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+/-"
                android:onClick="toggleSign" />
            <Button
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%"
                android:onClick="percentClicked"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/high_numbers"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                android:onClick="numberClicked"/>
            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8"
                android:onClick="numberClicked"/>
            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9"
                android:onClick="numberClicked"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/middle_numbers"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:onClick="numberClicked"/>
            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:onClick="numberClicked"/>
            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6"
                android:onClick="numberClicked"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/low_numbers"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:onClick="numberClicked"/>
            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:onClick="numberClicked"/>
            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:onClick="numberClicked"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_row"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="15">

            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content"
                android:text="0"
                android:onClick="numberClicked"/>

            <Button
                android:id="@+id/decimal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="."
                android:onClick="numberClicked"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>